# QtQuick3DChess

./: .gitignore  CMakeLists.txt  README.md  qml.qrc  res.qrc
qml/: ChessBoard.qml  ChessPiece.qml  ChessPieces.qml  PieceSelector.qml  main.qml
qml/pages/: Gameplay.qml  Welcome.qml
qml/pages/gameplay/: ChessBoard.qml  ChessPieces.qml  PieceSelector.qml
qml/pieces/: Bishop.qml  ChessPiece.qml  King.qml  Knight.qml  Pawn.qml  Queen.qml  Rook.qml
res/meshes/: 3.fbx  D.fbx  bishop.mesh  king.mesh  knight.mesh  pawn.mesh  queen.mesh  rook.mesh
server/: index.js  package-lock.json  package.json  works.js
src/: ChessController.cpp  ChessController.h  ChessEnums.h  ChessModel.cpp  ChessModel.h  ChessPiece.cpp  ChessPiece.h  ChessSquare.cpp  ChessSquare.h  main.cpp
